--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>joelbits.parsers</groupId>
-    <artifactId>parser-jmh</artifactId>
+    <artifactId>javaParser</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
@@ -35,7 +35,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <finalName>javaparser</finalName>
+                            <finalName>javaParser</finalName>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
@@ -69,12 +69,6 @@
             <artifactId>auto-service</artifactId>
             <version>1.0-rc3</version>
             <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>3.0</version>
         </dependency>
     </dependencies>
 </project>
